Fix #6316 "Explanatory Text can overflow"

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/explanation/explanation.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/explanation/explanation.less
@@ -3,6 +3,11 @@
 
 .orbeon {
   .xbl-fr-explanation .xforms-mediatype-text-html {
+
+    .xforms-output-output {
+      overflow-wrap: break-word;
+    }
+
     line-height: @frRelativeLineHeight; // set line height to something proportional to the font size, unlike the default
     li {
       line-height: @frRelativeLineHeight;
